--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -6,7 +6,9 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #ececec;
 }
 
 @import "./header.scss";
 @import "./login.scss";
+@import "./listWrapper.scss";
